--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: "2"
 services:
-  api:
-    build: ./api/
-    ports:
-      - 5000:5000
   node:
-    build: ./node/
-    ports:
-      - 5050:5050
+     build: .
+     ports:
+       - 5000:500
   mongodb:
     image: mongo
     ports:
